--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,6 @@
 VITE_SUPABASE_URL=your_supabase_url_here
 VITE_SUPABASE_ANON_KEY=your_supabase_anon_key_here
+
+PIX_KEY=your_pix_key_here
+PIX_MERCHANT_NAME=Your Business Name
+PIX_MERCHANT_CITY=YOUR CITY
