--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
 VITE_SUPABASE_URL=your_supabase_url_here
 VITE_SUPABASE_ANON_KEY=your_supabase_anon_key_here
+VITE_UTMFY_API_KEY=your_utmify_api_key_here
 
 PIX_KEY=your_pix_key_here
 PIX_MERCHANT_NAME=Your Business Name
